--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html class="nojs html css_verticalspacer" lang="es-ES">
  <head>
 
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Inicio</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4049315692" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4277400612" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=58876188"/>
@@ -221,7 +221,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="SubMenu MenuLevel1 clearfix" id="u34183"><!-- vertical box -->
            <ul class="SubMenuView clearfix colelem" id="u34184"><!-- vertical box -->
             <li class="MenuItemContainer clearfix colelem" id="u34407"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34409" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34413-4"><!-- content --><p>Sede</p></div></a></li>
-            <li class="MenuItemContainer clearfix colelem" id="u36325"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u36328" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36331-4"><!-- content --><p>Video</p></div></a></li>
            </ul>
           </div>
          </div>
@@ -294,7 +293,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div id="u1915-9">
        <p id="u1915-2">Expositores</p>
        <p>&nbsp;</p>
-       <p id="u1915-6"><a class="nonblock" href="#">Expositores, facilitadores e invitados del panel proporcionarán ideas inspiradvoras y estimulantes consejos prácticos.</a></p>
+       <p id="u1915-6"><a class="nonblock" href="href://#">Expositores, facilitadores e invitados del panel proporcionarán ideas inspiradvoras y estimulantes consejos prácticos.</a></p>
        <p>&nbsp;</p>
        <p>&nbsp;</p>
       </div>
@@ -386,9 +385,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <ul class="AccordionWidget clearfix grpelem" id="accordionu2134"><!-- vertical box -->
       <li class="AccordionPanel borderbox clearfix colelem" id="u2135"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2138-4"><!-- content --><div id="u2138-3"><p>DESCARGAS</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2136"><!-- group --><div class="clearfix grpelem" id="u2137-8"><!-- content --><p>Aquí encontraras toda la información relativa a la</p><p>III Convención Nacional de Protección Civil</p><p>No te pierdas ninguna de las ponencias y talleres que hemos diseñado pensando en ti</p></div></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2143"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2144-4"><!-- content --><div id="u2144-3"><p>Agenda Rápida</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2145"><!-- group --><a class="nonblock nontext museBGSize clearfix grpelem" id="u2146-3" href="#" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2139"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2140-4"><!-- content --><div id="u2140-3"><p>Agenda Completa</p></div></div><div class="pointer_cursor AccordionPanelContent disn borderbox clearfix colelem" id="u2141"><!-- group --><a class="block" target="_blank" href="href://#"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2142-3" href="#" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2173"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2176-4"><!-- content --><div id="u2176-3"><p>Folleto Informativo</p></div></div><div class="pointer_cursor AccordionPanelContent borderbox clearfix colelem" id="u2174"><!-- group --><a class="block" href="#"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2206-3" href="#" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2143"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2144-4"><!-- content --><div id="u2144-3"><p>Agenda Rápida</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2145"><!-- group --><div class="museBGSize clearfix grpelem" id="u2146-3"><!-- content --><p>&nbsp;</p></div></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2139"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2140-4"><!-- content --><div id="u2140-3"><p>Agenda Completa</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2141"><!-- group --><div class="museBGSize clearfix grpelem" id="u2142-3"><!-- content --><p>&nbsp;</p></div></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2173"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2176-4"><!-- content --><div id="u2176-3"><p>Folleto Informativo</p></div></div><div class="AccordionPanelContent borderbox clearfix colelem" id="u2174"><!-- group --><div class="museBGSize clearfix grpelem" id="u2206-3"><!-- content --><p>&nbsp;</p></div></div></li>
      </ul>
      <div class="grpelem" id="u12103"><!-- custom html -->
       <a class="twitter-timeline" href="https://twitter.com/LUISFELIPE_P" data-tweet-limit="2" data-chrome="nofooter transparent noheader noborders" data-link-color="#88CBC7"  data-theme="dark" >Tweets de LUISFELIPE_P</a> 
@@ -412,13 +411,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clip_frame grpelem" id="u28600"><!-- image -->
          <img class="block" id="u28600_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="40" data-image-height="70"/>
         </div>
-        <div class="clearfix grpelem" id="pu28598"><!-- group -->
-         <div class="clearfix grpelem" id="u28598"><!-- group -->
-          <div class="clearfix grpelem" id="u28599-9"><!-- content -->
-           <p id="u28599-2">III Convención Nacional</p>
-           <p id="u28599-4">Protección Civil</p>
-           <p id="u28599-7"><span id="u28599-5">SAN LUIS POTOSÍ</span> | 2016</p>
-          </div>
+        <div class="clearfix grpelem" id="pu28599-9"><!-- group -->
+         <div class="clearfix grpelem" id="u28599-9"><!-- content -->
+          <p id="u28599-2">III Convención Nacional</p>
+          <p id="u28599-4">Protección Civil</p>
+          <p id="u28599-7"><span id="u28599-5">SAN LUIS POTOSÍ</span> | 2016</p>
          </div>
          <div class="clip_frame grpelem" id="u28602"><!-- svg -->
           <img class="svg" id="u28603" src="images/logopc.svg?crc=3794957760" width="44" height="48" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
