--- a/sede.html
+++ b/sede.html
@@ -16,8 +16,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Sede</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4072327414"/>
-  <link rel="stylesheet" type="text/css" href="css/sede.css?crc=190694914" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3978241954"/>
+  <link rel="stylesheet" type="text/css" href="css/sede.css?crc=451808037" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_sede.css?crc=4063148616"/>
@@ -544,7 +544,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="SubMenu MenuLevel1 clearfix" id="u34138"><!-- vertical box -->
       <ul class="SubMenuView clearfix colelem" id="u34139"><!-- vertical box -->
        <li class="MenuItemContainer clearfix colelem" id="u34348"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u34350" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34354-4"><!-- content --><p>Sede</p></div></a></li>
-       <li class="MenuItemContainer clearfix colelem" id="u36367"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u36370" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36372-4"><!-- content --><p>Video</p></div></a></li>
       </ul>
      </div>
     </div>
@@ -626,8 +625,8 @@ Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('#slideshowu20080', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:false,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu20080 */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 $('#slideshowu20080').registerSlideshowScrollEffect([{"in":[-Infinity,-6],"play":false},{"in":[-6,Infinity],"play":50}]);/* scroll effect */
-$('#u25804-6').registerOpacityScrollEffect([{"in":[-Infinity,92.9],"fade":109.9,"opacity":100},{"in":[92.9,92.9],"opacity":50},{"in":[92.9,Infinity],"fade":70.1,"opacity":0}]);/* scroll effect */
-$('#u25808').registerOpacityScrollEffect([{"in":[-Infinity,167.9],"fade":50,"opacity":100},{"in":[167.9,167.9],"opacity":50},{"in":[167.9,Infinity],"fade":50,"opacity":0}]);/* scroll effect */
+$('#u25804-6').registerOpacityScrollEffect([{"fade":109.9,"in":[-Infinity,92.9],"opacity":100},{"in":[92.9,92.9],"opacity":50},{"fade":70.1,"in":[92.9,Infinity],"opacity":0}]);/* scroll effect */
+$('#u25808').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,167.9],"opacity":100},{"in":[167.9,167.9],"opacity":50},{"fade":50,"in":[167.9,Infinity],"opacity":0}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(a){if(a&&"function"==typeof a.notify?a.notify():Muse.Assert.fail("Error calling selector function: "+a),false)throw a;}})})};
