--- a/presentaciones.html
+++ b/presentaciones.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Presentaciones</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=284509099"/>
-  <link rel="stylesheet" type="text/css" href="css/presentaciones.css?crc=503811665" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=517266111"/>
+  <link rel="stylesheet" type="text/css" href="css/presentaciones.css?crc=20282366" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_presentaciones.css?crc=4031558529"/>
@@ -58,15 +58,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
         </div>
         <div class="MenuItemContainer clearfix grpelem" id="u31522"><!-- vertical box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u31523" href="expositores.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u31524-4"><!-- content --><p>Expositores</p></div></a>
+         <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u31523"><!-- horizontal box -->
+          <div class="MenuItemLabel NoWrap clearfix grpelem" id="u31524-4"><!-- content -->
+           <p>Expositores</p>
+          </div>
+         </div>
         </div>
         <div class="MenuItemContainer clearfix grpelem" id="u14323"><!-- vertical box -->
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u14324" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14327-4"><!-- content --><p>Descargas</p></div><div class="transition grpelem" id="u14325"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u14328"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u14329"><!-- vertical box -->
            <li class="MenuItemContainer clearfix colelem" id="u14418"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14420" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14424-4"><!-- content --><h6>Galeria</h6></div></a></li>
-           <li class="MenuItemContainer clearfix colelem" id="u14512"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14515" href="agenda.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14517-4"><!-- content --><h6>Agenda</h6></div></a></li>
-           <li class="MenuItemContainer clearfix colelem" id="u14597"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u14600" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14603-4"><!-- content --><h6>Presentaciones</h6></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u14512"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14515"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14517-4"><!-- content --><h6>Agenda</h6></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u14597"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14600"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14603-4"><!-- content --><h6>Presentaciones</h6></div></div></li>
           </ul>
          </div>
         </div>
@@ -77,7 +81,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="clearfix grpelem" id="u28141"><!-- group -->
         <div class="clearfix grpelem" id="u27483"><!-- group -->
          <div class="clip_frame grpelem" id="u27486"><!-- image -->
-          <img class="block" id="u27486_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
+          <img class="block" id="u27486_img" src="images/grecas.png?crc=111591311" alt="" data-image-width="52" data-image-height="90"/>
          </div>
          <div class="clearfix grpelem" id="u27484"><!-- group -->
           <div class="clearfix grpelem" id="u27485-9"><!-- content -->
@@ -108,10 +112,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u13502" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u13505-4"><!-- content --><p>Folleto</p></div></a>
       </div>
       <div class="MenuItemContainer borderbox clearfix colelem" id="u13508"><!-- horizontal box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u13511" href="agenda.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u13512-4"><!-- content --><p>Agenda</p></div></a>
+       <div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u13511"><!-- horizontal box -->
+        <div class="MenuItemLabel borderbox clearfix grpelem" id="u13512-4"><!-- content -->
+         <p>Agenda</p>
+        </div>
+       </div>
       </div>
       <div class="MenuItemContainer borderbox clearfix colelem" id="u13515"><!-- horizontal box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix grpelem" id="u13518" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u13521-4"><!-- content --><p>Presentaciones</p></div></a>
+       <div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u13518"><!-- horizontal box -->
+        <div class="MenuItemLabel borderbox clearfix grpelem" id="u13521-4"><!-- content -->
+         <p>Presentaciones</p>
+        </div>
+       </div>
       </div>
       <div class="MenuItemContainer borderbox clearfix colelem" id="u13566"><!-- horizontal box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u13567" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u13568-4"><!-- content --><p>Galería</p></div></a>
@@ -340,7 +352,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix" id="u13002_align_to_page">
        <div class="clearfix grpelem" id="u27488"><!-- group -->
         <div class="clip_frame grpelem" id="u27489"><!-- image -->
-         <img class="block" id="u27489_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="40" data-image-height="70"/>
+         <img class="block" id="u27489_img" src="images/grecas.png?crc=111591311" alt="" data-image-width="40" data-image-height="70"/>
         </div>
         <div class="clearfix grpelem" id="u27491"><!-- group -->
          <div class="clearfix grpelem" id="u27494-9"><!-- content -->
@@ -352,9 +364,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <img class="svg" id="u27493" src="images/logopc.svg?crc=3794957760" width="50" height="47" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
          </div>
         </div>
-       </div>
-       <div class="clip_frame grpelem" id="u37058"><!-- svg -->
-        <img class="svg" id="u37059" src="images/gobmxlogo.svg?crc=1878811" alt="" data-mu-svgfallback="images/gobmxlogo_poster_.png?crc=3819646527" data-image-width="126" data-image-height="39"/>
        </div>
        <div class="clip_frame grpelem" id="u37060"><!-- svg -->
         <img class="svg" id="u37061" src="images/logo_mexico.svg?crc=3762957058" alt="" data-mu-svgfallback="images/logo_mexico_poster_.png?crc=4197092919" data-image-width="172" data-image-height="70"/>
