--- a/registro.html
+++ b/registro.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Registro</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=4135792054" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=3821698034" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_registro.css?crc=3925074953"/>
@@ -47,7 +47,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="clearfix" id="u34838"><!-- group -->
         <div id="u34841-wrapper">
          <div class="clip_frame" id="u34841"><!-- image -->
-          <img class="block" id="u34841_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
+          <img class="block" id="u34841_img" src="images/grecas.png?crc=111591311" alt="" data-image-width="52" data-image-height="90"/>
          </div>
         </div>
         <div class="clearfix" id="u34839"><!-- group -->
@@ -85,15 +85,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u34827"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34828" href="expositores.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34829-4"><!-- content --><p>Expositores</p></div></a>
+      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u34828"><!-- horizontal box -->
+       <div class="MenuItemLabel NoWrap clearfix grpelem" id="u34829-4"><!-- content -->
+        <p>Expositores</p>
+       </div>
+      </div>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u34799"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34800" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34802-4"><!-- content --><p>Descargas</p></div><div class="transition grpelem" id="u34803"><!-- content --></div></a>
       <div class="SubMenu MenuLevel1 clearfix" id="u34804"><!-- vertical box -->
        <ul class="SubMenuView clearfix colelem" id="u34805"><!-- vertical box -->
         <li class="MenuItemContainer clearfix colelem" id="u34806"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34809" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u34812-4"><!-- content --><h6>Galeria</h6></div></a></li>
-        <li class="MenuItemContainer clearfix colelem" id="u34820"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34821" href="agenda.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u34823-4"><!-- content --><h6>Agenda</h6></div></a></li>
-        <li class="MenuItemContainer clearfix colelem" id="u34813"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34814" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u34815-4"><!-- content --><h6>Presentaciones</h6></div></a></li>
+        <li class="MenuItemContainer clearfix colelem" id="u34820"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34821"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u34823-4"><!-- content --><h6>Agenda</h6></div></div></li>
+        <li class="MenuItemContainer clearfix colelem" id="u34813"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34814"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u34815-4"><!-- content --><h6>Presentaciones</h6></div></div></li>
        </ul>
       </div>
      </div>
@@ -111,7 +115,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pu35009"><!-- group -->
     <div class="clearfix grpelem" id="u35009"><!-- group -->
      <div class="clip_frame grpelem" id="u35010"><!-- image -->
-      <img class="block" id="u35010_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="40" data-image-height="70"/>
+      <img class="block" id="u35010_img" src="images/grecas.png?crc=111591311" alt="" data-image-width="40" data-image-height="70"/>
      </div>
      <div class="clearfix grpelem" id="u35012"><!-- group -->
       <div class="clearfix grpelem" id="u35013-9"><!-- content -->
