--- a/video.html
+++ b/video.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "webpro.js", "jquery.musemenu.js", "jquery.watch.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "video.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "webpro.js", "jquery.watch.js", "musewpdisclosure.js", "jquery.musemenu.js", "jquery.museresponsive.js", "require.js", "video.css"], "outOfDate":[]};
 </script>
   
   <title>Video</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4281769274"/>
-  <link rel="stylesheet" type="text/css" href="css/video.css?crc=3973326754" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3915101930"/>
+  <link rel="stylesheet" type="text/css" href="css/video.css?crc=204352626" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_video.css?crc=4009373187"/>
@@ -267,17 +267,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
     </div>
-    <div class="clearfix temp_no_id" data-orig-id="u38502"><!-- group -->
-     <div class="clip_frame temp_no_id" data-orig-id="u27291"><!-- image -->
-      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/grecas.png?crc=111591311" alt="" width="40" height="69" data-orig-id="u27291_img" src="images/blank.gif?crc=4208392903"/>
-     </div>
-     <div class="clearfix temp_no_id" data-orig-id="pu27296-12"><!-- group -->
-      <span class="clearfix placeholder" data-placeholder-for="u27296-12_content"><!-- placeholder node --></span>
-      <div class="clip_frame temp_no_id" data-orig-id="u27771"><!-- svg -->
-       <img class="svg temp_no_id temp_no_img_src" data-orig-src="images/logopc.svg?crc=3794957760" width="34" height="37" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" data-orig-id="u27772" src="images/blank.gif?crc=4208392903"/>
-      </div>
-     </div>
-    </div>
     <span class="size_fluid_width_height grpelem placeholder" data-placeholder-for="u36625_content"><!-- placeholder node --></span>
     <span class="placeholder" data-placeholder-for="u412-4-wrapper_content"><!-- placeholder node --></span>
     <span class="nonblock nontext Button clearfix placeholder" data-placeholder-for="buttonu2989_content"><!-- placeholder node --></span>
@@ -285,6 +274,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width grpelem temp_no_id" data-orig-id="u493-bw">
      <div class="temp_no_id" data-orig-id="u493"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u493_align_to_page">
+       <div class="clearfix grpelem temp_no_id" data-orig-id="u38502"><!-- group -->
+        <div class="clip_frame grpelem temp_no_id" data-orig-id="u27291"><!-- image -->
+         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/grecas.png?crc=111591311" alt="" width="40" height="69" data-orig-id="u27291_img" src="images/blank.gif?crc=4208392903"/>
+        </div>
+        <div class="clearfix grpelem temp_no_id" data-orig-id="pu27296-12"><!-- group -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u27296-12_content"><!-- placeholder node --></span>
+         <div class="clip_frame grpelem temp_no_id" data-orig-id="u27771"><!-- svg -->
+          <img class="svg temp_no_id temp_no_img_src" data-orig-src="images/logopc.svg?crc=3794957760" width="34" height="37" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" data-orig-id="u27772" src="images/blank.gif?crc=4208392903"/>
+         </div>
+        </div>
+       </div>
        <span class="clip_frame grpelem placeholder" data-placeholder-for="u36924_content"><!-- placeholder node --></span>
       </div>
      </div>
@@ -328,18 +328,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <span class="clip_frame grpelem placeholder" data-placeholder-for="u38855_content"><!-- placeholder node --></span>
     </div>
-    <div class="clearfix colelem" id="paccordionu40574"><!-- group -->
-     <ul class="AccordionWidget clearfix grpelem" id="accordionu40574"><!-- vertical box -->
+    <div id="accordionu40574-wrapper">
+     <ul class="AccordionWidget clearfix pinned-colelem" id="accordionu40574"><!-- vertical box -->
       <li class="AccordionPanel borderbox clearfix colelem" id="u40575"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u40576-3"><!-- content --><div id="u40576-2"><p>&nbsp;</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u40577"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu40107"><!-- vertical box --><div class="MenuItemContainer borderbox clearfix colelem" id="u40115"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u40118" href="index.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u40119-4"><!-- content --><p>Inicio</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u40108"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u40109" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u40111-4"><!-- content --><p>Convencion</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u40212"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u40213"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u40216-4"><!-- content --><p>Expositores</p></div></div></div><div class="MenuItemContainer borderbox clearfix colelem" id="u40285"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u40286" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u40288-4"><!-- content --><p>Descargas</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u40355"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u40356" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u40358-4"><!-- content --><p>Registro</p></div></a></div></nav></div></li>
-     </ul>
-     <ul class="AccordionWidget clearfix grpelem" id="accordionu41137"><!-- vertical box -->
-      <li class="AccordionPanel borderbox clearfix colelem" id="u41138"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u41139-3"><!-- content --><div id="u41139-2"><p>&nbsp;</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u41140"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu41141"><!-- vertical box --><div class="MenuItemContainer borderbox clearfix colelem" id="u41156"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41159" href="index.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41161-4"><!-- content --><p>Inicio</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u41149"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41150" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41151-4"><!-- content --><p>Convencion</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u41163"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41164"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41166-4"><!-- content --><p>Expositores</p></div></div></div><div class="MenuItemContainer borderbox clearfix colelem" id="u41170"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41173" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41174-4"><!-- content --><p>Descargas</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u41142"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41145" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41147-4"><!-- content --><p>Registro</p></div></a></div></nav></div></li>
-     </ul>
-     <ul class="AccordionWidget clearfix grpelem" id="accordionu41621"><!-- vertical box -->
-      <li class="AccordionPanel borderbox clearfix colelem" id="u41622"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u41623-3"><!-- content --><div id="u41623-2"><p>&nbsp;</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u41624"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu41625"><!-- vertical box --><div class="MenuItemContainer borderbox clearfix colelem" id="u41640"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41643" href="index.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41645-4"><!-- content --><p>Inicio</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u41633"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41634" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41635-4"><!-- content --><p>Convencion</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u41647"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41648"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41650-4"><!-- content --><p>Expositores</p></div></div></div><div class="MenuItemContainer borderbox clearfix colelem" id="u41654"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41657" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41658-4"><!-- content --><p>Descargas</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u41626"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u41629" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u41631-4"><!-- content --><p>Registro</p></div></a></div></nav></div></li>
-     </ul>
-     <ul class="AccordionWidget clearfix grpelem" id="accordionu44041"><!-- vertical box -->
-      <li class="AccordionPanel borderbox clearfix colelem" id="u44042"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u44043-3"><!-- content --><div id="u44043-2"><p>&nbsp;</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u44044"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu44045"><!-- vertical box --><div class="MenuItemContainer borderbox clearfix colelem" id="u44046"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u44047" href="index.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u44050-4"><!-- content --><p>Inicio</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u44067"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u44068" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u44070-4"><!-- content --><p>Convencion</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u44060"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u44061"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u44063-4"><!-- content --><p>Expositores</p></div></div></div><div class="MenuItemContainer borderbox clearfix colelem" id="u44053"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u44056" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u44057-4"><!-- content --><p>Descargas</p></div></a></div><div class="MenuItemContainer borderbox clearfix colelem" id="u44074"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u44077" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel borderbox clearfix grpelem" id="u44078-4"><!-- content --><p>Registro</p></div></a></div></nav></div></li>
      </ul>
     </div>
     <span class="size_fluid_width_height colelem placeholder" data-placeholder-for="u36625_content"><!-- placeholder node --></span>
@@ -370,9 +361,6 @@ Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity', '#bp_960', '#bp_768', '#bp_620', '#bp_480'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.initWidget('#accordionu44901', ['#bp_620'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:true,defaultIndex:-1}); });/* #accordionu44901 */
 Muse.Utils.initWidget('#accordionu40574', ['#bp_480'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:true,defaultIndex:-1}); });/* #accordionu40574 */
-Muse.Utils.initWidget('#accordionu41137', ['#bp_480'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:true,defaultIndex:-1}); });/* #accordionu41137 */
-Muse.Utils.initWidget('#accordionu41621', ['#bp_480'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:true,defaultIndex:-1}); });/* #accordionu41621 */
-Muse.Utils.initWidget('#accordionu44041', ['#bp_480'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:true,defaultIndex:-1}); });/* #accordionu44041 */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(a){if(a&&"function"==typeof a.notify?a.notify():Muse.Assert.fail("Error calling selector function: "+a),false)throw a;}})})};
