--- a/expositores.html
+++ b/expositores.html
@@ -11,19 +11,19 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "musewpdisclosure.js", "jquery.musemenu.js", "jquery.museresponsive.js", "require.js", "expositores.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.musemenu.js", "jquery.watch.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "expositores.css"], "outOfDate":[]};
 </script>
   
   <title>Expositores</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3915101930"/>
-  <link rel="stylesheet" type="text/css" href="css/expositores.css?crc=3847542387" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3816787084"/>
+  <link rel="stylesheet" type="text/css" href="css/expositores.css?crc=445601504" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_expositores.css?crc=4009373187"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=4205231904"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_expositores.css?crc=4131031127" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_expositores.css?crc=3793936292"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-p_g_-maestra.css?crc=3855530162"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_expositores.css?crc=191944077" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
