--- a/descargas.html
+++ b/descargas.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Descargas</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=517266111"/>
+  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=534443281"/>
   <link rel="stylesheet" type="text/css" href="css/descargas.css?crc=487903249" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
@@ -75,7 +75,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
         </div>
         <div class="MenuItemContainer clearfix grpelem" id="u35434"><!-- vertical box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35458" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35461-4"><!-- content --><p>Registro</p></div></a>
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35458" href="http://bitnami-meanstack-5813.cloudapp.net/" target="_blank"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35461-4"><!-- content --><p>Registro</p></div></a>
         </div>
        </nav>
        <div class="clearfix grpelem" id="u28141"><!-- group -->
@@ -152,7 +152,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </object>
      </div>
     </div>
-    <a class="nonblock nontext Button clearfix pinned-colelem" id="buttonu13007" href="registro.html"><!-- container box --><div class="clearfix grpelem" id="u13008-4"><!-- content --><p>REGISTRO</p></div></a>
+    <a class="nonblock nontext Button clearfix pinned-colelem" id="buttonu13007" href="http://bitnami-meanstack-5813.cloudapp.net/" target="_blank"><!-- container box --><div class="clearfix grpelem" id="u13008-4"><!-- content --><p>REGISTRO</p></div></a>
     <div class="verticalspacer" data-offset-top="557" data-content-above-spacer="557" data-content-below-spacer="62"></div>
     <div class="browser_width colelem" id="u13002-bw">
      <div id="u13002"><!-- group -->
