--- a/galeria.html
+++ b/galeria.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Galeria</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=517266111"/>
-  <link rel="stylesheet" type="text/css" href="css/galeria.css?crc=4205570937" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=534443281"/>
+  <link rel="stylesheet" type="text/css" href="css/galeria.css?crc=302045167" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_galeria.css?crc=4031558529"/>
@@ -75,7 +75,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
         </div>
         <div class="MenuItemContainer clearfix grpelem" id="u35434"><!-- vertical box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35458" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35461-4"><!-- content --><p>Registro</p></div></a>
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35458" href="http://bitnami-meanstack-5813.cloudapp.net/" target="_blank"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35461-4"><!-- content --><p>Registro</p></div></a>
         </div>
        </nav>
        <div class="clearfix grpelem" id="u28141"><!-- group -->
@@ -336,7 +336,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <img class="block ImageInclude" id="u10064_img" data-src="images/mg_9609-crop-u10064.jpg?crc=4070060341" src="images/blank.gif?crc=4208392903" alt="" data-width="1125" data-height="596"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u10084"><!-- image -->
-        <img class="block ImageInclude" id="u10084_img" data-src="images/mg_9611-crop-u10084.jpg?crc=458692482" src="images/blank.gif?crc=4208392903" alt="" data-width="1125" data-height="596"/>
+        <img class="block ImageInclude" id="u10084_img" data-src="images/mg_9611-crop-u10084.jpg?crc=498900064" src="images/blank.gif?crc=4208392903" alt="" data-width="1125" data-height="596"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u10104"><!-- image -->
         <img class="block ImageInclude" id="u10104_img" data-src="images/mg_9614-crop-u10104.jpg?crc=295699267" src="images/blank.gif?crc=4208392903" alt="" data-width="1126" data-height="596"/>
@@ -1056,7 +1056,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="svg" id="u9860" src="images/logopc.svg?crc=3794957760" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290" data-image-width="562" data-image-height="562"/>
      </div>
     </div>
-    <a class="nonblock nontext Button rounded-corners clearfix pinned-colelem" id="buttonu13007" href="registro.html"><!-- container box --><div class="clearfix grpelem" id="u13008-4"><!-- content --><p>REGISTRO</p></div></a>
+    <a class="nonblock nontext Button rounded-corners clearfix pinned-colelem" id="buttonu13007" href="http://bitnami-meanstack-5813.cloudapp.net/" target="_blank"><!-- container box --><div class="clearfix grpelem" id="u13008-4"><!-- content --><p>REGISTRO</p></div></a>
     <div class="verticalspacer" data-offset-top="1287" data-content-above-spacer="1286" data-content-below-spacer="62"></div>
     <div class="browser_width colelem" id="u13002-bw">
      <div id="u13002"><!-- group -->
