--- a/registro.html
+++ b/registro.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Registro</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=3821698034" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=481963943" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_registro.css?crc=3925074953"/>
@@ -102,7 +102,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u35630"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u35631" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35633-4"><!-- content --><p>Registro</p></div></a>
+      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u35631"><!-- horizontal box -->
+       <div class="MenuItemLabel NoWrap clearfix grpelem" id="u35633-4"><!-- content -->
+        <p>Registro</p>
+       </div>
+      </div>
      </div>
     </nav>
     <div id="u34834-4-wrapper">
