--- a/presentaciones.html
+++ b/presentaciones.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Presentaciones</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=517266111"/>
-  <link rel="stylesheet" type="text/css" href="css/presentaciones.css?crc=20282366" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=534443281"/>
+  <link rel="stylesheet" type="text/css" href="css/presentaciones.css?crc=3920478837" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_presentaciones.css?crc=4031558529"/>
@@ -75,7 +75,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
         </div>
         <div class="MenuItemContainer clearfix grpelem" id="u35434"><!-- vertical box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35458" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35461-4"><!-- content --><p>Registro</p></div></a>
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35458" href="http://bitnami-meanstack-5813.cloudapp.net/" target="_blank"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35461-4"><!-- content --><p>Registro</p></div></a>
         </div>
        </nav>
        <div class="clearfix grpelem" id="u28141"><!-- group -->
@@ -201,7 +201,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <a class="nonblock nontext Button clearfix pinned-colelem" id="buttonu13007" href="registro.html"><!-- container box --><div class="clearfix grpelem" id="u13008-4"><!-- content --><p>REGISTRO</p></div></a>
+    <a class="nonblock nontext Button clearfix pinned-colelem" id="buttonu13007" href="http://bitnami-meanstack-5813.cloudapp.net/" target="_blank"><!-- container box --><div class="clearfix grpelem" id="u13008-4"><!-- content --><p>REGISTRO</p></div></a>
     <div class="Subt-tulo clearfix colelem" id="u30850-4"><!-- content -->
      <h2>Presentaciones 10 de Noviembre</h2>
     </div>
